Se terminó AutoForm. AutoForm es una clase para crear formularios para llenar, ya funciona para el formulario de Inscripcion pero todavía no crea el pdf.

--- a/libs/Config/general.conf
+++ b/libs/Config/general.conf
@@ -1,4 +1,12 @@
 {
-   "fecha": "24-5-2016",
-   "firstRun": true
+   "Licenciatura": [
+      "Educaci\u00f3n",
+      "Comercio Internacional",
+      "Contador P\u00fablico",
+      "Ingeneir\u00eda Industrial",
+      "Ciencias de la Comunicaci\u00f3n",
+      "Derecho",
+      "Mercadotecnia y Publicidad",
+      "Recursos Humanos"
+   ]
 }
