--- a/libs/Config/inscripcion.conf
+++ b/libs/Config/inscripcion.conf
@@ -1,5 +1,4 @@
 {
-   "fecha": "24-5-2016",
    "PDF Name": [
       "ID",
       "Paternal",
@@ -7,5 +6,17 @@
       "Name"
    ],
    "Output": "../Outputs",
-   "Inscritos": 0
+   "Inscritos": 0,
+   "Choices": {
+      "Tipo de Sangre": [
+         "A+",
+         "A-",
+         "B+",
+         "B-",
+         "AB+",
+         "AB-",
+         "O+",
+         "O-"
+      ]
+   }
 }
