Se terminó AutoForm. AutoForm es una clase para crear formularios para llenar, ya funciona para el formulario de Inscripcion pero todavía no crea el pdf.

--- a/libs/Config/inscripcion.conf
+++ b/libs/Config/inscripcion.conf
@@ -1,11 +1,22 @@
 {
-   "fecha": "24-5-2016",
-   "PDF Name": [
-      "ID",
-      "Paternal",
-      "Maternal",
-      "Name"
-   ],
    "Output": "../Outputs",
-   "Inscritos": 0
+   "PDF Name": [
+      "Matr\u00edcula",
+      "Apellido Paterno",
+      "Apellido Materno",
+      "Nombre"
+   ],
+   "Inscritos": 0,
+   "Choices": {
+      "Tipo de Sangre": [
+         "A+",
+         "A-",
+         "B+",
+         "B-",
+         "AB+",
+         "AB-",
+         "O+",
+         "O-"
+      ]
+   }
 }
