Ya se generan y abren los pdf's.

--- a/libs/Config/general.conf
+++ b/libs/Config/general.conf
@@ -1,10 +1,10 @@
 {
    "Licenciatura": [
-      "Educaci\u00f3n",
+      "Educación",
       "Comercio Internacional",
-      "Contador P\u00fablico",
-      "Ingeneir\u00eda Industrial",
-      "Ciencias de la Comunicaci\u00f3n",
+      "Contador Público",
+      "Ingeneiría Industrial",
+      "Ciencias de la Comunicación",
       "Derecho",
       "Mercadotecnia y Publicidad",
       "Recursos Humanos"
